Enhance portfolio: Redesign Experience section, optimize SEO, add scroll animations, implement new minimalist logo, and codebase cleanup

--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,66 @@
   <link rel="icon" href="%PUBLIC_URL%/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
+  <!-- SEO Meta Tags -->
+  <title>Sankalp Rajeev | AI & Machine Learning Engineer | Portfolio</title>
+  <meta name="description"
+    content="Sankalp Rajeev - AI/Machine Learning Engineer specializing in Computer Vision, Deep Learning, NLP, and Robotics. University of Michigan graduate with expertise in PyTorch, TensorFlow, and cloud deployments." />
+  <meta name="keywords"
+    content="Sankalp Rajeev, AI Engineer, Machine Learning Engineer, ML Engineer, Computer Vision Engineer, Deep Learning Engineer, Robotics Engineer, Python Developer, AI Developer, University of Michigan, Arizona State University, PyTorch, TensorFlow, NLP, Computer Vision, Full Stack AI, AI Portfolio" />
+  <meta name="author" content="Sankalp Rajeev" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://sankalp-rajeev.onrender.com/" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://sankalp-rajeev.onrender.com/" />
+  <meta property="og:title" content="Sankalp Rajeev | AI & Machine Learning Engineer" />
+  <meta property="og:description"
+    content="AI/Machine Learning Engineer specializing in Computer Vision, Deep Learning, NLP, and Robotics. View my projects, experience, and skills." />
+  <meta property="og:image" content="https://sankalp-rajeev.onrender.com/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://sankalp-rajeev.onrender.com/" />
+  <meta property="twitter:title" content="Sankalp Rajeev | AI & Machine Learning Engineer" />
+  <meta property="twitter:description"
+    content="AI/Machine Learning Engineer specializing in Computer Vision, Deep Learning, NLP, and Robotics." />
+  <meta property="twitter:image" content="https://sankalp-rajeev.onrender.com/logo.png" />
+
+  <!-- Structured Data for Google -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Sankalp Rajeev",
+    "jobTitle": "AI/Machine Learning Engineer",
+    "url": "https://sankalp-rajeev.onrender.com/",
+    "sameAs": [
+      "https://github.com/sankalp-rajeev",
+      "https://linkedin.com/in/sankalp-rajeev"
+    ],
+    "alumniOf": [
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "University of Michigan"
+      },
+      {
+        "@type": "CollegeOrUniversity",
+        "name": "Arizona State University"
+      }
+    ],
+    "knowsAbout": ["Artificial Intelligence", "Machine Learning", "Computer Vision", "Deep Learning", "Natural Language Processing", "Robotics", "Python", "PyTorch", "TensorFlow"]
+  }
+  </script>
+
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <meta name="theme-color" content="#007aff" />
-  <meta name="description"
-    content="Sankalp Rajeev's professional portfolio showcasing projects, skills, and achievements in software development and machine learning." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Sankalp's Portfolio</title>
 </head>
 
 <body>
